[gd_scene load_steps=13 format=2]

[ext_resource path="res://Presentacion/bgnewcomplete.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Fuentes/AlternateGothicExCondATF-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/docs_logo.png" type="Texture" id=3]
[ext_resource path="res://Menu/gimp_logo.png" type="Texture" id=4]
[ext_resource path="res://Menu/inkscape.png" type="Texture" id=5]
[ext_resource path="res://Presentacion/Godot.png" type="Texture" id=6]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=7]
[ext_resource path="res://Recursos/Fuentes/AlternateGothicExCondATF-Bold.tres" type="DynamicFont" id=8]
[ext_resource path="res://Menu/286-2864921_blender-logo-blender-3d-logo-hd-png-download.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="Control" type="Control"]
rect_min_size = Vector2( 1366, 768 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.819608, 0.145098, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1366.0
margin_bottom = 708.0
rect_min_size = Vector2( 1366, 768 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margen" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margen"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1336.0
margin_bottom = 738.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Logo" type="TextureRect" parent="Margen/VBox"]
margin_right = 1306.0
margin_bottom = 300.0
rect_min_size = Vector2( 1306, 300 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 2
size_flags_stretch_ratio = 6.13
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margen/VBox"]
margin_top = 480.0
margin_right = 1306.0
margin_bottom = 580.0
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
text = "Yggdrasil"
align = 1

[node name="HBox" type="HBoxContainer" parent="Margen/VBox"]
margin_top = 600.0
margin_right = 1306.0
margin_bottom = 657.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_constants/separation = 30

[node name="Jugar" type="Button" parent="Margen/VBox/HBox"]
margin_right = 415.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
text = "Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ver Creditos" type="Button" parent="Margen/VBox/HBox"]
margin_left = 445.0
margin_right = 860.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
text = "Ver Créditos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salir" type="Button" parent="Margen/VBox/HBox"]
margin_left = 890.0
margin_right = 1306.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
text = "Salir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Margen/VBox"]
margin_top = 677.0
margin_right = 1306.0
margin_bottom = 708.0

[node name="Copyrigth" type="Label" parent="Margen/VBox/HBoxContainer"]
margin_right = 863.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "Versión 1.0.0 (betA)"

[node name="License" type="Label" parent="Margen/VBox/HBoxContainer"]
margin_left = 867.0
margin_right = 1306.0
margin_bottom = 31.0
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "Bajo licencia Creative Commons del Global Game Jam"

[node name="Panel" type="Panel" parent="Margen"]
visible = false
margin_left = 30.0
margin_top = 30.0
margin_right = 1336.0
margin_bottom = 738.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Margen" type="MarginContainer" parent="Margen/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atras" type="Button" parent="Margen/Panel/Margen"]
margin_left = 30.0
margin_right = 118.0
margin_bottom = 57.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 8 )
text = "Atrás"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Margen/Panel/Margen"]
margin_left = 30.0
margin_right = 1276.0
margin_bottom = 708.0
mouse_filter = 2
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Margen/Panel/Margen/VBoxContainer2"]
margin_left = 58.0
margin_top = 87.0
margin_right = 1188.0
margin_bottom = 381.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer"]
margin_right = 1130.0
margin_bottom = 51.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Programador: "

[node name="VBoxContainer" type="VBoxContainer" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 610.0
margin_bottom = 51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 390.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Dariem Lázaro García López"

[node name="HBoxContainer2" type="HBoxContainer" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer"]
margin_top = 101.0
margin_right = 1130.0
margin_bottom = 294.0
custom_constants/separation = 45

[node name="Label" type="Label" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 186.0
margin_bottom = 193.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Diseñadores:"

[node name="VBoxContainer" type="VBoxContainer" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 231.0
margin_right = 1130.0
margin_bottom = 193.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 899.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Dariem Lázaro García López (2D, 3D, Ambientación y Escenario.)"

[node name="Label2" type="Label" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 71.0
margin_right = 899.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Héctor Andy Rivero Vila (2D)"

[node name="Label3" type="Label" parent="Margen/Panel/Margen/VBoxContainer2/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 142.0
margin_right = 899.0
margin_bottom = 193.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Oscar Mastrapa Prats (3D)"

[node name="HBoxContainer" type="HBoxContainer" parent="Margen/Panel/Margen/VBoxContainer2"]
margin_top = 508.0
margin_right = 1246.0
margin_bottom = 708.0
size_flags_vertical = 8

[node name="Godot" type="TextureRect" parent="Margen/Panel/Margen/VBoxContainer2/HBoxContainer"]
margin_right = 246.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="GodotDocs" type="TextureRect" parent="Margen/Panel/Margen/VBoxContainer2/HBoxContainer"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Inkscape" type="TextureRect" parent="Margen/Panel/Margen/VBoxContainer2/HBoxContainer"]
margin_left = 500.0
margin_right = 746.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Gimp" type="TextureRect" parent="Margen/Panel/Margen/VBoxContainer2/HBoxContainer"]
margin_left = 750.0
margin_right = 996.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Blender" type="TextureRect" parent="Margen/Panel/Margen/VBoxContainer2/HBoxContainer"]
margin_left = 1000.0
margin_right = 1246.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="Margen/VBox/HBox/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="Margen/VBox/HBox/Ver Creditos" to="." method="_on_Ver_Creditos_pressed"]
[connection signal="pressed" from="Margen/VBox/HBox/Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="Margen/Panel/Margen/Atras" to="." method="_on_Atras_pressed"]
